--- a/index.html
+++ b/index.html
@@ -3,16 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlatziMovies</title>
-    <link rel="stylesheet" href="./styles/app.css">
+    <title>MaxiMovies</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+    <header>
+        <section class="header-back">
+            <a href=""><img src="./images/flecha_para_atras_.png" alt=""></a>
+        </section>
+        <section class="header-search">
+            <h2>MaxiMovies</h2>
+            <h2>Accion</h2>
+            <form>
+                <input type="text" placeholder="Buscar">
+                <button>🔍</button>
+            </form>
+        </section>
+    </header>
+
+
     <main>
-        <h1>PlatziMovies</h1>
+        <section class="main-section-movies">
+            <div class="main-section-movies-tittles">
+                <h2>Tendencias</h2>
+                <button>Ver mas</button>
+            </div>
+            <div class="main-movies-images">
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una pelicula" class="movie-img">
+                </article>
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una Pelicula" class="movie-img">
+                </article>
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una Pelicula" class="movie-img">
+                </article>
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una Pelicula" class="movie-img">
+                </article>
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una Pelicula" class="movie-img">
+                </article>
+                <article class="main-img-movies">
+                    <img src="./images/Poster-Flash.jpeg" alt="Imagen de una Pelicula" class="movie-img">
+                </article>
+            </div>
+        </section>
 
+        <section class="main-categories">
+            <div class="main-categories-tittle">
+                <h2>Categorias</h2>
+            </div>
+            <div class="main-categories-list">
+                <article class="categories-list">
+                    <div class="category-container">
+                      <h3 class="category-title one">Romance</h3>
+                    </div>
+                    <div class="category-container">
+                        <h3 class="category-title two">Accion</h3>
+                    </div>
+                    <div class="category-container">
+                      <h3 class="category-title three">Aventura</h3>
+                    </div>
+                    <div class="category-container">
+                      <h3 class="category-title four">Comedia</h3>
+                    </div>
+                    <div class="category-container">
+                      <h3 class="category-title five">Drama</h3>
+                    </div>
+                    <div class="category-container">
+                      <h3 class="category-title six">Musical</h3>
+                    </div>
+            </div>
+        </section>
 
-        <script src="./src/secrets.js"></script>
-        <script src="./src/main.js"></script>
+    
+
     </main>
+
+    <footer>
+        <h2>Hecho por Daniel Echeverria</h2>
+    </footer>
+    
 </body>
 </html>
