--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-        <section class="header-back inactive ">
-            <a href="" class="hidden"><img src="./images/flecha_para_atras_.png" alt="" class="hidden"></a>
+
+
+        <section class="header-back " id="header">
+    
+            <section>
+                <a href=""><img src="./images/icons8-adelante-50.png " alt=""></a>
+            </section>
+            <section class="detail-movie-section bords">
+                <article class="detail-movie">
+                    <div>
+                        <img src="./images/D_NQ_NP_794040-MLM42909419189_072020-O.webp" alt="">
+                    </div>
+                    <div>
+                        <h2>Capitana Marvel</h2>
+                        <p>Una guerrera extraterrestre de la civilización Kree se encuentra atrapada en medio de una batalla. Con la ayuda de Nick Fury trata de descubrir los secretos de su pasado mientras aprovecha sus poderes para terminar la guerra.</p>
+                    </div>
+                </article>
+            </section>
+           
         </section>
-        <section class="header-search">
-            <div class="tiitle-head">
+
+
+
+        <section class="header-search bords inactive">
+            <div class="tiitle-head ">
                 <h1>MaxiMovies</h2>
-                <img src="./images/png-transparent-logo-brand-com-student-creative-slate-text-logo-film-removebg-preview (1).png" alt="">
+                <img src="./images/png-transparent-logo-brand-com-student-creative-slate-text-logo-film-removebg-preview (1).png" alt="" >
             </div>
             <form>
                 <input type="text" placeholder="Buscar">
@@ -23,7 +43,7 @@
 
 
     <main>
-        <section class="main-section-movies" id="main-section-movies">
+        <section class="main-section-movies bords inactive" id="main-section-movies ">
             <div class="main-section-movies-tittles">
                 <h2>Tendencias</h2>
                 <button>Ver mas</button>
@@ -39,7 +59,7 @@
             </div>
         </section>
 
-        <section class="main-categories">
+        <section class="main-categories bords inactive">
             <div class="main-categories-tittle">
                 <h2>Categorias</h2>
             </div>
@@ -56,7 +76,7 @@
     </main>
 
     <footer>
-        <h2>Hecho por Daniel Echeverria</h2>
+        <h2 class="inactive">Hecho por Daniel Echeverria</h2>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
