--- a/index.html
+++ b/index.html
@@ -11,17 +11,28 @@
 
         <section class="header-back " id="header">
     
-            <section>
-                <a href=""><img src="./images/icons8-adelante-50.png " alt=""></a>
+            <section class="header-arrow-back ">
+                <a href=""><img src="./images/icons8-arrow-50.png" alt=""></a>
             </section>
-            <section class="detail-movie-section bords">
+            <section class="detail-movie-section">
                 <article class="detail-movie">
-                    <div>
+                    <div class="img-detail-movie">
                         <img src="./images/D_NQ_NP_794040-MLM42909419189_072020-O.webp" alt="">
                     </div>
-                    <div>
-                        <h2>Capitana Marvel</h2>
-                        <p>Una guerrera extraterrestre de la civilización Kree se encuentra atrapada en medio de una batalla. Con la ayuda de Nick Fury trata de descubrir los secretos de su pasado mientras aprovecha sus poderes para terminar la guerra.</p>
+                    <div class="info-detail-movie">
+                        <div class="tittle-detail-movie">
+                            <h2>Capitana Marvel (2023)</h2>
+                            <div class="sub-tiitle-information">
+                                <h3>6.4</h3>
+                                <h3>Ciencia Ficcion</h3>
+                                <h3>Aventura</h3>
+                                <h3>Accion</h3>
+                            </div>
+                        </div>
+                        <div class="text-detail-movie">
+                            <h3>Overview</h3>
+                            <p>Una guerrera extraterrestre de la civilización Kree se encuentra atrapada en medio de una batalla. Con la ayuda de Nick Fury trata de descubrir los secretos de su pasado mientras aprovecha sus poderes para terminar la guerra.</p>
+                        </div>
                     </div>
                 </article>
             </section>
