--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 
 
-        <section class="header-back " id="header">
+        <section class="header-back inactive" id="header">
     
             <section class="header-arrow-back ">
                 <a href=""><img src="./images/icons8-arrow-50.png" alt=""></a>
             </section>
-            <section class="detail-movie-section">
+
+            <section class="detail-movie-section ">
                 <article class="detail-movie">
                     <div class="img-detail-movie">
                         <img src="./images/D_NQ_NP_794040-MLM42909419189_072020-O.webp" alt="">
@@ -41,7 +42,7 @@
 
 
 
-        <section class="header-search bords inactive">
+        <section class="header-search bords ">
             <div class="tiitle-head ">
                 <h1>MaxiMovies</h2>
                 <img src="./images/png-transparent-logo-brand-com-student-creative-slate-text-logo-film-removebg-preview (1).png" alt="" >
@@ -54,7 +55,7 @@
 
 
     <main>
-        <section class="main-section-movies bords inactive" id="main-section-movies ">
+        <section class="main-section-movies bords " id="main-section-movies ">
             <div class="main-section-movies-tittles">
                 <h2>Tendencias</h2>
                 <button>Ver mas</button>
@@ -70,7 +71,7 @@
             </div>
         </section>
 
-        <section class="main-categories bords inactive">
+        <section class="main-categories bords ">
             <div class="main-categories-tittle">
                 <h2>Categorias</h2>
             </div>
