--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
     <main>
-        <section class="main-section-movies bords " id="main-section-movies ">
+        <section class="main-section-movies bords "  >
             <div class="main-section-movies-tittles">
                 <h2>Tendencias</h2>
                 <button>Ver mas</button>
