--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
 
             <section class="detail-movie-section ">
                 <article class="detail-movie">
-                    <div class="img-detail-movie">
-                        <img src="./images/D_NQ_NP_794040-MLM42909419189_072020-O.webp" alt="">
+                    <div class="detail-movie-img">
+                        <img src="" alt="">
                     </div>
                     <div class="info-detail-movie">
                         <div class="tittle-detail-movie">
                             <h2>Capitana Marvel (2023)</h2>
                             <div class="sub-tiitle-information">
-                                <h3>6.4</h3>
-                                <h3>Ciencia Ficcion</h3>
-                                <h3>Aventura</h3>
-                                <h3>Accion</h3>
+                                <h3 class="califiacion">6.4</h3>
+                                <div class="genre"></div>
+                                
                             </div>
                         </div>
                         <div class="text-detail-movie">
